--- a/css/Styles.css
+++ b/css/Styles.css
@@ -188,7 +188,7 @@ nav span a:hover {
 
 .layer-1 {
 	width: 100%;
-	height: 100vh;
+	height: 760px;
 	padding-top: 230px;
 	box-sizing: border-box;
 	background-image: url('../images/bg1.jpg');
@@ -276,7 +276,6 @@ nav span a:hover {
 
 .layer-2 {
 	width: 100%;
-	height: 100vh;
 	background-color: #cdcdcd;
 	padding-top: 200px;
 	box-sizing: border-box;
@@ -369,7 +368,7 @@ nav span a:hover {
 
 .layer-3 {
 	width: 100%;
-	height: 80vh;
+	height: 600px;
 	background-image: url('../images/bg2.jpg');
 	background-position: center;
 	background-size: cover;
@@ -408,7 +407,6 @@ nav span a:hover {
 }
 .batteries .col {
 	width: 50%;
-	height: 100%;
 }
 .batteries .col h2 {
 	font-size: 25px;
@@ -458,7 +456,7 @@ nav span a:hover {
 
 .layer-4 {
 	width: 100%;
-	height: 100vh;
+	height: 760px;
 	background-image: url('../images/bg4.jpg');
 	background-size: 100% 100%;
 	padding: 100px 0;
@@ -475,7 +473,6 @@ nav span a:hover {
 
 .layer-5 {
 	width: 100%;
-	height: 120vh;
 	background-color: #181818;
 	box-sizing: border-box;
 	padding-top: 75px;
@@ -498,6 +495,87 @@ nav span a:hover {
 	height: 2px;
 	background-color: #725316;
 }
+
+.layer-5 .portfolio {
+	width: 1200px;
+	margin: 60px auto 0;
+}
+.layer-5 .portfolio .row {
+	width: 100%;
+	margin-top: 50px;
+}
+.layer-5 .portfolio .col {
+	width: 45%;
+	height: 350px;
+	position: relative;
+}
+.layer-5 .portfolio .col img {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	transition: 0.3s all;
+	filter: brightness(0.75);
+}
+.layer-5 .portfolio .col .col-bg {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	padding: 20px;
+	box-sizing: border-box;
+}
+.layer-5 .portfolio .col .col-bg div {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,0.4);
+	transform: scale(0.9);
+	opacity: 0;
+	transition: 0.3s all;
+	box-sizing: border-box;
+	padding-top: 130px;
+}
+.layer-5 .portfolio .col .col-bg h2 {
+	color: #fff;
+	font-size: 200%;
+	font-family: voice, josefinR, sans-serif;
+	letter-spacing: 5px;
+	position: absolute;
+	top: 30%;
+	left: 50%;
+	transform: translate3d(-50%, 50%, 0);
+	transition: 0.3s all;
+	text-align: center;
+}
+.layer-5 .portfolio .col .col-bg p {
+	color: #fff;
+	width: 70%;
+	font-size: 17px;
+	font-family: josefinR;
+	margin: auto;
+	text-indent: 20px;
+	opacity: 0;
+	position: relative;
+	transform: scale(0.5);
+	transition: 0.3s all;
+}
+.layer-5 .portfolio .col:hover img {
+	filter: brightness(1);
+}
+.layer-5 .portfolio .col:hover .col-bg div {
+	transform: scale(1);
+	opacity: 1;
+}
+.layer-5 .portfolio .col:hover .col-bg h2 {
+	transform: translate3d(-50%, -50%, 0);
+}
+.layer-5 .portfolio .col:hover .col-bg p {
+	opacity: 1;
+	transform: scale(1);
+}
+.layer-5 .divider {
+	height: 100px;
+}
+/*
 .layer-5 .portfolio {
 	width: 1000px;
 	padding-top: 75px;
@@ -529,11 +607,12 @@ nav span a:hover {
 	color: #eee;
 	font: 18px/100px josefinR;
 }
+*/
 .warning {
-	font-family: josefinB, sans-serif;
+	font-family: josefinR, sans-serif;
 	color: #fff;
 	text-align: center;
-	font-size: 30px;
+	font-size: 25px;
 	margin-top: 40px;
 }
 /* ============== LAYER 6 ========================== */
@@ -660,6 +739,11 @@ nav span a:hover {
 	background-color: transparent;
 	color: #725316;
 }
+.layer-6 form p.formWarning {
+	color: red;
+	font-size: 100%;
+	font-family: josefinB, sans-serif;
+}
 /* ============ FOOTER ========================== */
 
 footer {
@@ -707,3 +791,134 @@ footer p {
 .red {
 	background-color: red;
 }
+
+
+/* =========== MEDIA QUERIES =================== */
+
+@media only screen and (max-width: 600px) {
+	.layer-1 {
+		height: 400px;
+		padding-top: 150px;
+	}
+	.layer-1 .heading {
+		font-size: 35px;
+	}
+	.layer-1 .underheading {
+		font-size: 20px;
+	}
+	.layer-1 .icon-container {
+		display: none;
+	}
+	.avatar-divider::before {
+		width: 200px;
+		height: 200px;
+		top: -120px;
+		transform: translateX(-100px);
+	}
+	.layer-2 {
+		padding-top: 100px;
+	}
+	.layer-2 .l2-heading {
+		font-size: 25px;
+	}
+	.layer-2 .l2-underheading {
+		font-size: 18px;
+	}
+	.layer-2 .col {
+		width: 100%;
+		margin-top: 30px;
+		box-sizing: border-box;
+		padding-bottom: 30px;
+		border-bottom: 3px solid #725316;
+	}
+	.layer-3 {
+		padding: 50px 15px 50px 15px;
+	}
+	.layer-3 h1 {
+		font-size: 35px;
+	}
+	.batteries .col {
+		width: 100%;
+	}
+	.layer-3 .l3-container .batteries .battery {
+		width: 200px;
+		height: 40px;
+		padding: 10px 15px;
+	}
+	.layer-3 .l3-container .batteries .battery .overload {
+		height: 20px;
+	}
+	#btr1 {
+		width: 145px;
+	}
+	#btr2 {
+		width: 135px;
+	}
+	#btr3 {
+		width: 90px;
+	}
+	#btr4 {
+		width: 70px;
+	}
+	.layer-4 {
+		height: 400px;
+		padding: 50px 0;
+	}
+	.layer-4 h1 {
+		font-size: 22px;
+	}
+	.layer-5 {
+		padding-top: 40px;
+	}
+	.layer-5 h1 {
+		font-size: 40px;
+	}
+	.layer-5 .portfolio {
+		width: 100%;
+	}
+	.layer-5 .portfolio .row {
+		margin-top: 0;
+	}
+	.layer-5 .portfolio .col {
+		width: 100%;
+		margin-top: 40px;
+	}
+	.layer-5 .portfolio .col img {
+		filter: brightness(1);
+	}
+	.layer-5 .portfolio .col .col-bg div {
+		transform: scale(1);
+		opacity: 1;
+	}
+	.layer-5 .portfolio .col .col-bg h2 {
+		transform: translate3d(-50%, -50%, 0);
+	}
+	.layer-5 .portfolio .col .col-bg p {
+		transform: scale(1);
+		opacity: 1;
+	}
+	.warning {
+		font-size: 18px;
+		width: 80%;
+		margin: 40px auto 0;
+	}
+	.layer-6 {
+		width: 100%;
+		height: 1000px;
+	}
+	.layer-6 .container .col.right {
+		width: 100%;
+		float: left;
+	}
+	.layer-6 .container .col-left {
+		width: 100%;
+		float: right;
+	}
+	.layer-6 .container {
+		padding: 30px 20px;
+	}
+	.layer-6 form {
+
+	}
+}
+
