Trying to fix images

--- a/css/Styles.css
+++ b/css/Styles.css
@@ -279,6 +279,7 @@ nav span a:hover {
 	background-color: #cdcdcd;
 	padding-top: 200px;
 	box-sizing: border-box;
+	height: 740px;
 }
 .layer-2 .l2-heading {
 	color: #444;
