--- a/css/Styles.css
+++ b/css/Styles.css
@@ -799,6 +799,23 @@ footer p {
 /* =========== MEDIA QUERIES =================== */
 
 @media only screen and (max-width: 600px) {
+	#modal .modal-icons .col {
+		transform: translate3d(0,0,0);
+	}
+	#modal #right,
+	#modal #left {
+		width: 100%;
+	}
+	#modal #left {
+		margin-top: 20px;
+	}
+	#modal nav {
+		padding: 60px 30px 0;
+	}
+	#modal nav span {
+		line-height: 40px;
+		font-size: 25px;
+	}
 	.layer-1 {
 		height: 400px;
 		padding-top: 150px;
@@ -820,6 +837,7 @@ footer p {
 	}
 	.layer-2 {
 		padding-top: 100px;
+		height: 1283px;
 	}
 	.layer-2 .l2-heading {
 		font-size: 25px;
@@ -836,6 +854,7 @@ footer p {
 	}
 	.layer-3 {
 		padding: 50px 15px 50px 15px;
+		height: 700px;
 	}
 	.layer-3 h1 {
 		font-size: 35px;
@@ -907,21 +926,27 @@ footer p {
 	}
 	.layer-6 {
 		width: 100%;
-		height: 1000px;
+		height: 850px;
 	}
 	.layer-6 .container .col.right {
 		width: 100%;
 		float: left;
 	}
-	.layer-6 .container .col-left {
+	.layer-6 .container .col.left {
 		width: 100%;
 		float: right;
+		transform: translate3d(0,-70px,0);
 	}
 	.layer-6 .container {
 		padding: 30px 20px;
 	}
-	.layer-6 form {
-
+	.layer-6 .container .col.left h2::after {
+		display: none;
+	}
+	.layer-6 .container .col.left .p1img,
+	.layer-6 .container .col.left .p2img,
+	.layer-6 .container .col.left .p3img {
+		margin-left: 50px;
 	}
 }
 
