--- a/css/Styles.css
+++ b/css/Styles.css
@@ -1,8 +1,20 @@
+::-moz-selection { /* Code for Firefox */
+    color: skyblue;
+    background: transparent;
+}
+
+::selection {
+    color: skyblue;
+    background: transparent;
+}
 html, body, * {
 	padding: 0;
 	margin: 0;
 	outline: 0;
 	border: 0;
+}
+body {
+	background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(113,113,113,1) 95%);
 }
 @font-face {
 	font-family: 'josefinR';
@@ -301,6 +313,7 @@ nav span a:hover {
 }
 .layer-2 .l2-container {
 	margin-top: 40px;
+	display: block;
 }
 .layer-2 .col .img {
 	width: 80px;
@@ -458,18 +471,96 @@ nav span a:hover {
 .layer-4 {
 	width: 100%;
 	height: 760px;
-	background-image: url('../images/bg4.jpg');
-	background-size: 100% 100%;
-	padding: 100px 0;
+	background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(113,113,113,1) 95%);
+	padding: 60px 0;
 	box-sizing: border-box;
 }
 .layer-4 h1 {
-	font-size: 40px;
+	font-size: 32px;
 	font-family: josefinR, sans-serif;
 	color: #333;
 	text-align: center;
 }
-
+.layer-4 .roadmap {
+	width: 100%;
+	padding: 200px 70px 0;
+	box-sizing: border-box;
+}
+.layer-4 .roadmap .col.left {
+	width: 40%;
+}
+.layer-4 .roadmap .col.right {
+	width: 60%;
+}
+.block-1,
+.block-2,
+.block-3,
+.block-4 {
+	margin: auto;
+	color: #fff;
+	font: 22px/60px josefinB;
+	text-align: center;
+	height: 60px;
+	letter-spacing: 2px;
+	cursor: pointer;
+	box-sizing: border-box;
+	transition: all 0.25s;
+}
+.block-1 {
+	width: 160px;
+	background-color: #999;
+}
+.block-2 {
+	width: 200px;
+	background-color: #777;
+}
+.block-3 {
+	width: 240px;
+	background-color: #555;
+}
+.block-4 {
+	width: 280px;
+	background-color: #333;
+}
+.block-1:hover,
+.block-2:hover,
+.block-3:hover,
+.block-4:hover {
+	border-left: 20px solid #725316;
+}
+.layer-4 .col .bubble {
+	width: 450px;
+	height: 450px;
+	margin: auto;
+	border: 3px solid rgba(0,0,0,0.8);
+	border-radius: 999px;
+	transform: translateY(-100px);
+	position: relative;
+	box-sizing: border-box;
+	padding: 120px 100px;
+}
+.layer-4 .col .bubble::before {
+	content: '';
+	width: 500px;
+	height: 500px;
+	position: absolute;
+	top: -27.5px;
+	left: -27.5px;
+	border: 2px solid rgba(0,0,0,0.3);
+	border-radius: 999px;
+	box-sizing: border-box;
+}
+.layer-4 .col .bubble p {
+	font-family: josefinR, sans-serif;
+	font-size: 22px;
+}
+.layer-4 .col .bubble p i {
+	font-size: 26px;
+	font-style: normal;
+	font-family: josefinB, sans-serif;
+	text-align: center;
+	display: block;
+}
 /* ============= LAYER 5 =============================== */
 
 .layer-5 {
@@ -797,7 +888,42 @@ footer p {
 
 
 /* =========== MEDIA QUERIES =================== */
-
+@media only screen and (min-width: 1500px) {
+	.layer-1 {
+		width: 1336px;
+		margin: auto;
+	}
+	.layer-2 {
+		width: 1336px;
+		margin: auto;
+	}
+	.avatar-divider {
+		width: 1336px;
+		margin: auto;
+	}
+	.layer-3 {
+		width: 1336px;
+		margin: auto;
+		padding: 100px 0;
+	}
+	.layer-4 {
+		width: 1336px;
+		margin: auto;
+	}
+	.layer-5 {
+		width: 1336px;
+		margin: auto;
+	}
+	.layer-6 {
+		width: 1336px;
+		height: 750px;
+		margin: auto;
+	}
+	footer {
+		width: 1336px;
+		margin: auto;
+	}
+}
 @media only screen and (max-width: 600px) {
 	#modal .modal-icons .col {
 		transform: translate3d(0,0,0);
@@ -947,6 +1073,9 @@ footer p {
 	.layer-6 .container .col.left .p2img,
 	.layer-6 .container .col.left .p3img {
 		margin-left: 50px;
+	}
+	footer p {
+		font-size: 100%;
 	}
 }
 
