--- a/css/Styles.css
+++ b/css/Styles.css
@@ -678,124 +678,7 @@ nav span a:hover {
 	height: 2px;
 	background-color: #00CCAA;
 }
-.layer-5 .col a {
-	text-decoration: none;
-}
-.layer-5 .portfolio {
-	width: 1200px;
-	margin: 60px auto 0;
-}
-.layer-5 .portfolio .row {
-	width: 100%;
-	margin-top: 50px;
-}
-.layer-5 .portfolio .col {
-	width: 45%;
-	height: 350px;
-	position: relative;
-}
-.layer-5 .portfolio .col img {
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	transition: 0.3s all;
-	filter: brightness(0.75);
-}
-.layer-5 .portfolio .col .col-bg {
-	position: relative;
-	width: 100%;
-	height: 100%;
-	padding: 20px;
-	box-sizing: border-box;
-}
-.layer-5 .portfolio .col .col-bg div {
-	position: relative;
-	width: 100%;
-	height: 100%;
-	background-color: rgba(0,0,0,0.4);
-	transform: scale(0.9);
-	opacity: 0;
-	transition: 0.3s all;
-	box-sizing: border-box;
-	padding-top: 130px;
-}
-.layer-5 .portfolio .col .col-bg h2 {
-	color: #fff;
-	font-size: 200%;
-	font-family: voice, josefinR, sans-serif;
-	letter-spacing: 5px;
-	position: absolute;
-	top: 30%;
-	left: 50%;
-	transform: translate3d(-50%, 50%, 0);
-	transition: 0.3s all;
-	text-align: center;
-}
-.layer-5 .portfolio .col .col-bg p {
-	color: #fff;
-	width: 70%;
-	font-size: 17px;
-	font-family: josefinR;
-	margin: auto;
-	text-indent: 20px;
-	opacity: 0;
-	position: relative;
-	transform: scale(0.5);
-	transition: 0.3s all;
-}
-.layer-5 .portfolio .col .col-bg p#lowerr {
-	transform: translateY(30px); scale(0.5);
-}
-.layer-5 .portfolio .col:hover img {
-	filter: brightness(1);
-}
-.layer-5 .portfolio .col:hover .col-bg div {
-	transform: scale(1);
-	opacity: 1;
-}
-.layer-5 .portfolio .col:hover .col-bg h2 {
-	transform: translate3d(-50%, -50%, 0);
-}
-.layer-5 .portfolio .col:hover .col-bg p {
-	opacity: 1;
-	transform: translateY(30px); scale(1);
-}
-.layer-5 .divider {
-	height: 100px;
-}
-/*
-.layer-5 .portfolio {
-	width: 1000px;
-	padding-top: 75px;
-	margin: 0 auto;
-}
-.portfolio .sq {
-	width: 200px;
-	height: 200px;
-	box-sizing: border-box;
-	position: relative;
-	overflow: hidden;
-	transition: background-color 0.3s;
-}
-.portfolio .sq:hover {
-	background-color: #aaa;
-}
-.portfolio .sq a {
-	cursor: pointer;
-	text-decoration: none;
-	display: block;
-	width: 100%;
-	height: 100%;
-	box-sizing: border-box;
-	padding: 50px 0;
-	position: relative;
-}
-.portfolio .sq a h2 {
-	text-align: center;
-	color: #eee;
-	font: 18px/100px josefinR;
-}
-*/
+
 .warning {
 	font-family: josefinR, sans-serif;
 	color: #fff;
@@ -803,6 +686,74 @@ nav span a:hover {
 	font-size: 25px;
 	margin-top: 40px;
 }
+
+/* ========== LAYER 5 - FLEX BOX ===============*/
+.layer-5 .flex {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	position: relative;
+	padding: 50px 0;
+	box-sizing: border-box;
+}
+.layer-5 .box {
+	position: relative;
+	flex-basis: 43%;
+	height: 400px;
+	margin-top: 50px;
+	padding: 30px;
+	box-sizing: border-box;
+}
+.layer-5 .box a {
+	width: 100%;
+	height: 400px;
+	position: relative;
+	text-decoration: none;
+	color: #fff;
+	font-size: 32px;
+	font-family: 'josefinR', sans-serif;
+}
+.layer-5 .box a div {
+	width: 100%;
+	height: 100%;
+	position: relative;
+	background-color: rgba(0,0,0,0.6);
+	padding: 120px 50px 20px;
+	box-sizing: border-box;
+	opacity: 0;
+	transform: scale(0);
+	transition: all 0.3s;
+	z-index: 1;
+}
+.layer-5 .box img {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+.layer-5 .box:hover a div {
+	opacity: 1;
+	transform: scale(1);
+}
+.layer-5 .box h2 {
+	position: absolute;
+	top: 30%;
+	left: 50%;
+	text-shadow: 0px 0px 5px #000;
+	font-size: 50px;
+	font-family: 'voice', 'josefinB', sans-serif;
+	transform: translate3d(-50%, 0, 0);
+	color: #fff;
+	text-align: center;
+	transition: all 0.3s ease-out;
+	z-index: 2;
+}
+.layer-5 .box:hover h2 {
+	font-size: 35px;
+	transform: translate3d(-50%, -50px, 0);
+}
+
 /* ============== LAYER 6 ========================== */
 
 .layer-6 {
@@ -812,6 +763,7 @@ nav span a:hover {
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 	background-position: center;
+	transform: translateY(-5px);
 }
 .layer-6 .container {
 	width: 100%;
@@ -938,7 +890,7 @@ footer {
 	width: 100%;
 	height: 60px;
 	background-color: #333;
-	border-top: 5px solid #666;
+	border-top: 5px solid #555;
 }
 footer p {
 	text-align: center;
@@ -1033,82 +985,177 @@ footer p {
 		margin: auto;
 	}
 }
-@media only screen and (max-width: 1366px) {
+@media only screen and (max-width: 1440px) {
 	.layer-1 {
-		width: 1366px;
+		width: 1024px;
 		margin: auto;
-	}
-	.layer-2 {
-		width: 1366px;
-		margin: auto;
-	}
-	.avatar-divider {
-		width: 1366px;
-		margin: auto;
-	}
-	.layer-3 {
-		width: 1366px;
-		margin: auto;
-		padding: 100px 0;
-	}
-	.layer-4 {
-		width: 1366px;
-		margin: auto;
-	}
-	.layer-5 {
-		width: 1366px;
-		margin: auto;
-	}
-	.layer-6 {
-		width: 1366px;
-		height: 750px;
-		margin: auto;
-	}
-	footer {
-		width: 1366px;
-		margin: auto;
-	}
-}
-@media only screen and (max-width: 1024px) {
-	.layer-1 {
-		width: 100%;
+		padding-top: 200px;
 		height: 600px;
-		padding-top: 165px;
-	}
-	.layer-2 {
-		width: 100%;
 	}
 	.layer-1 .heading {
-		font-size: 95px;
+		font-size: 100px;
 	}
-	div.avatar-divider::before {
+	.layer-1 .icon-container .coli {
+		width: 35%;
+	}
+	.avatar-divider::before {
 		width: 250px;
 		height: 250px;
 		top: -150px;
 		transform: translateX(-125px);
 	}
-	.layer-3 {
-		width: 100%;
+	.layer-2 {
+		width: 1024px;
+		margin: auto;
+		height: 760px;
 	}
 	.avatar-divider {
-		width: 100%;
+		width: 1024px;
+		margin: auto;
 	}
-	.batteries .col.right {
-		transform: translateX(75px);
+	.layer-3 {
+		width: 1024px;
+		margin: auto;
+		padding: 100px 0;
 	}
-	.batteries .col.left {
-		transform: translateX(-75px);
+	.layer-3 .l3-container .batteries{
+		width: 75%;
 	}
 	.layer-4 {
-		width: 100%;
+		width: 1024px;
+		margin: auto;
 	}
 	.layer-4 .roadmap .dot-wrapper {
-		transform: translate3d(150px, -75px,0);
+		transform: translate3d(100px, -75px, 0);
 	}
 	.layer-4 .col p {
-		width: 80%;
-		padding: 99px 80px;
+		width: 85%;
+	}
+	.layer-5 {
+		width: 1024px;
+		margin: auto;
+	}
+	.layer-5 .box {
+		height: 350px;
+	}
+	.layer-5 .box h2 {
+		font-size: 45px;
+	}
+	.layer-5 .box:hover h2 {
+		font-size: 35px;
+	}
+	.layer-5 .box a {
+		font-size: 23px;
+		font-family: 'josefinL', sans-serif;
+	}
+	.layer-6 {
+		width: 1024px;
+		height: 750px;
+		margin: auto;
+	}
+	.layer-6 .container {
+		padding: 200px 110px 0px;
+	}
+	.layer-6 form {
+		padding: 25px 30px 25px;
+	}
+	.layer-6 form input[type="text"], .layer-6 form textarea {
+		width: 85%;
+	}
+	footer {
+		width: 1024px;
+		margin: auto;
+	}
+}
+@media only screen and (max-width: 1024px) {
+	.layer-1 {
+		width: 800px;
+		height: 600px;
+		padding-top: 165px;
+	}
+	.layer-1 .icon-container .coli .col a img {
+		width: 45px;
+		height: 45px;
+	}
+	.layer-2 {
+		width: 800px;
+		padding-top: 150px;
+		height: 700px;
+	}
+	.layer-1 .heading {
+		font-size: 95px;
+	}
+	.layer-2 .l2-underheading {
+		font-size: 30px;
+	}
+	.layer-2 .text {
+		font-size: 25px;
+	}
+	div.avatar-divider::before {
+		width: 220px;
+		height: 220px;
+		top: -140px;
+		transform: translateX(-110px);
+	}
+	.layer-3 {
+		width: 800px;
+	}
+	.layer-3 .l3-container .batteries .battery {
+		width: 250px;
+		height: 50px;
+		padding: 12px 20px;
+	}
+	.layer-3 .l3-container .batteries .battery .overload {
+		height: 26px;
+	}
+	#btr1 {
+		width: 180px;
+	}
+	#btr2 {
+		width: 160px;
+	}
+	#btr3 {
+		width: 130px;
+	}
+	#btr4 {
+		width: 100px;
+	}
+	.avatar-divider {
+		width: 800px;
+	}
+	.batteries .col.right {
+		transform: translateX(50px);
+	}
+	.batteries .col.left {
+		transform: translateX(-50px);
+	}
+	.layer-4 .roadmap .col.right {
+		transform: translate3d(90px, -60px, 0);
+	}
+	.layer-4 .roadmap .dot-wrapper {
+		transform: translate3d(25px, -75px, 0);
+	}
+	.layer-4 {
+		width: 800px;
+	}
+	.layer-4 .roadmap {
+		padding: 130px 70px 0;
+	}
+	.layer-4 .col .bubble {
+		width: 370px;
+		height: 370px;
+	}
+	.layer-4 .col .bubble2 {
+		width: 420px;
+		height: 420px;
+		top: -25px;
+		left: -25px;
+	}
+	.layer-4 .col p {
+		width: 90%;
+		padding: 90px 80px;
 		transform: translateX(-25px);
+		font-size: 20px;
 
 	}
 	@keyframes playSwitchhh {
@@ -1130,20 +1177,44 @@ footer p {
 		margin-block-end: 0;
 	}
 	.layer-5 {
-		width: 100%;
+		width: 800px;
 	}
 	.layer-5 .portfolio {
-		width: 100%;
+		width: 800px;
 	}
 	.layer-5 .divider {
 		height: 70px;
 	}
+	.layer-5 .box {
+		height: 300px;
+	}
+	.layer-5 .warning {
+		font-size: 18px;
+	}
+	.layer-5 .box a div {
+		padding: 105px 25px 20px;
+	}
+	.layer-5 .box:hover h2 {
+		font-size: 28px;
+	}
+	.layer-5 .box a {
+		font-size: 18px;
+	}
 	.layer-6 {
-		width: 100%;
+		width: 800px;
 		height: 600px;
 	}
 	.layer-6 .container {
-		padding: 140px 120px 0px;
+		padding: 140px 60px 0px 120px;
+	}
+	.layer-6 .col h2 {
+		font-size: 35px;
+	}
+	.layer-6 .container .col.left {
+		width: 50%;
+	}
+	.layer-6 .container .col.right {
+		width: 45%;
 	}
 	.layer-6 form {
 		padding: 5px 40px 15px;
@@ -1155,31 +1226,35 @@ footer p {
 		height: 45px;
 	}
 	footer {
-		width: 100%;
+		width: 800px;
+		border-top: 3px solid #555;
 	}
 }
 @media only screen and (max-width: 768px) {
+	.layer-1 {
+		width: 625px;
+	}
 	.modal-icons .col {
 		width: 33%;
 	}
 	.layer-1 {
-		height: 500px;
+		height: 450px;
 	}
 	.layer-1 .heading {
-		font-size: 80px;
+		font-size: 50px;
 	}
 	.layer-1 .underheading {
-		font-size: 25px;
+		font-size: 18px;
 	}
 	.layer-1 .icon-container .coli .col a img {
-		width: 40px;
-		height: 40px;
+		width: 35px;
+		height: 35px;
 	}
 	div.avatar-divider::before {
 		width: 200px;
 		height: 200px;
 		top: -125px;
-		transform: translateX(-100px);
+		transform: translateX(-115px);
 	}
 	.layer-2 {
 		padding-top: 150px;
